--- a/css/main.css
+++ b/css/main.css
@@ -5,24 +5,19 @@
 
 /*...........................main mobile....PAGINA INICIAL..............*/
 main {
-  grid-area: main; }
-
-main {
+  grid-area: main;
   display: grid;
   grid-template-areas: "main-logo" "main-descripcion"; }
-
-.main-logo, .main-descripcion {
-  border: solid 2px white; }
-
-.main-logo {
-  grid-area: main-logo;
-  text-align: center;
-  margin-top: auto; }
-
-.main-descripcion {
-  background-color: #eeccb0;
-  grid-area: main-descripcion;
-  justify-content: center; }
+  main .main-logo {
+    border: solid 2px white;
+    grid-area: main-logo;
+    text-align: center;
+    margin-top: auto; }
+  main .main-descripcion {
+    border: solid 2px white;
+    background-color: #eeccb0;
+    grid-area: main-descripcion;
+    justify-content: center; }
 
 .logo img {
   max-width: 150px; }
@@ -106,12 +101,12 @@ header {
 header, main, footer {
   border: solid 2px white; }
 
+/*scss*/
 .link-inicio {
   font-family: 'Kanit', sans-serif;
   color: white; }
-
-ul {
-  list-style: none; }
+  .link-inicio ul {
+    list-style: none; }
 
 .home-navegador-lista {
   list-style-type: none;
@@ -138,12 +133,12 @@ ul {
 header, main, footer {
   border: solid 2px white; }
 
+/*scss*/
 .link-inicio {
   font-family: 'Kanit', sans-serif;
   color: white; }
-
-ul {
-  list-style: none; }
+  .link-inicio ul {
+    list-style: none; }
 
 .home-navegador-lista-home {
   list-style-type: none;
@@ -173,12 +168,12 @@ ul {
 .home-navegador-lista-home, .mapa, .redessociales-menu {
   border: solid 2px white; }
 
+/*scss*/
 .link-inicio {
   font-family: 'Kanit', sans-serif;
   color: white; }
-
-ul {
-  list-style: none; }
+  .link-inicio ul {
+    list-style: none; }
 
 .home-navegador-lista-home {
   list-style-type: none;
