--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -9,26 +9,26 @@
     /*...........................main mobile....PAGINA INICIAL..............*/
     main{
         grid-area: main;
-    }
-    main{ 
         display: grid;
         grid-template-areas: 
         "main-logo"
         "main-descripcion";
-    }
-    .main-logo, .main-descripcion{
+
+        .main-logo, {
             border: solid 2px white;
-        }
-    .main-logo{
             grid-area: main-logo;
             text-align: center;
             margin-top: auto;
         }
-    .main-descripcion{
-            background-color: $color-primary;
-            grid-area: main-descripcion;
-            justify-content: center;
+
+        .main-descripcion{
+        border: solid 2px white;
+        background-color: $color-primary;
+        grid-area: main-descripcion;
+        justify-content: center;
         }
+    }
+
     .logo img{
             max-width: 150px;   
         }
@@ -122,13 +122,18 @@
 header, main, footer{
     border: solid 2px white;
 }
+
+/*scss*/
+
 .link-inicio{
     font-family: 'Kanit', sans-serif;
     color: white;
+
+    ul{
+    list-style: none;
+    }
 }
-ul{
-list-style: none;
-}
+
 .home-navegador-lista{
 list-style-type: none;
 display: flex;
@@ -158,12 +163,15 @@ grid-area: redessociales-menu;
 header, main, footer{
 border: solid 2px white;
 }
+
+/*scss*/ 
 .link-inicio{
 font-family: 'Kanit', sans-serif;
 color: white;
-}
-ul{
-list-style: none;
+
+    ul{
+    list-style: none;
+    }
 }
 .home-navegador-lista-home{
 list-style-type: none;
@@ -199,12 +207,15 @@ grid-area: redessociales-menu;
 .home-navegador-lista-home, .mapa, .redessociales-menu{
 border: solid 2px white;
 }
+
+/*scss*/ 
 .link-inicio{
 font-family: 'Kanit', sans-serif;
 color: white; 
-}
-ul{
-list-style: none;
+
+    ul{
+    list-style: none;
+    }
 }
 .home-navegador-lista-home{
 list-style-type: none;
@@ -429,7 +440,7 @@ main{
 
 .titulo-menu{
 font-family: 'Kanit', sans-serif;
-color: #C89265; 
+color: $color-tittle; 
 text-align: center;
 font-size: 2em;
 height: 50px;
@@ -563,14 +574,14 @@ footer{
 }
 
 .fondo-color-registro{
-     background-color: #eeccb0;
+     background-color: $color-primary;
     height: 50px;
 }
 
     /*..................................................TITULOS  PAGINAS.................................*/
 .titulo-envios{
     font-family: 'Kanit', sans-serif;
-    color: #C89265;
+    color: $color-tittle;
     text-align: center;
     font-size: 2em;
 }
