--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,4 +3,5 @@ $color-gradiente: #70280a;
 $color-secundary:#522903;
 $color-tittle:#C89265;
 $color-links: white;
-$color-gradiente2: rgba(165, 42, 42, 0.308);
+$color-gradiente2: #a52a2a4f;
+$color-background:#ff8206af;
