--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,11 @@ footer {
   max-width: 65px; }
 
 .navbar {
-  background-color: purple !important; }
+  background-color: #b36002ab !important;
+  font-family: 'Kanit', sans-serif !important;
+  font-weight: bold !important; }
+  .navbar .navbar-brand {
+    color: white !important; }
 
 /*-----------------------media queries................desktop- PAGINA INICIAL*/
 @media screen and (min-width: 768px) {
