--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -15,14 +15,12 @@
         "main-descripcion";
 
         .main-logo, {
-            border: solid 2px white;
             grid-area: main-logo;
             text-align: center;
             margin-top: auto;
         }
 
         .main-descripcion{
-        border: solid 2px white;
         background-color: $color-primary;
         grid-area: main-descripcion;
         justify-content: center;
@@ -37,21 +35,23 @@
             height: 200px;
             margin: auto;
         }
-    .Churros-rosario{
+
+    .boton{
         font-family: 'Kanit', sans-serif;
-        font-size: 1.5em;
         font-weight: bolder;
+        text-align: center;
+    }
+    .Churros-rosario{
+        @extend .boton;
+        font-size: 1.5em;
         color:#522903;
         margin: 20px 40px;  
-        text-align: center;
         }
     .parrafo, .parrafo1, .parrafo2{
-        font-family: 'Kanit', sans-serif;
+        @extend .boton;
         font-size: 1em;
-        font-weight: bolder;
         color:$color-gradiente;
         margin: 20px 10px;  
-        text-align: center;    
         }
     .video{
             display: none;
@@ -79,7 +79,7 @@
     color:$color-gradiente;
 } 
 .navegacion-menu{
-    background-image: linear-gradient($color-primary, rgba(165, 42, 42, 0.308));
+    background-image: linear-gradient($color-primary, #a52a2a4f);
     display:grid;
     justify-content:start;
     grid-template-areas: 
@@ -164,15 +164,7 @@ header, main, footer{
 border: solid 2px white;
 }
 
-/*scss*/ 
-.link-inicio{
-font-family: 'Kanit', sans-serif;
-color: white;
 
-    ul{
-    list-style: none;
-    }
-}
 .home-navegador-lista-home{
 list-style-type: none;
 display: flex;
@@ -209,14 +201,7 @@ border: solid 2px white;
 }
 
 /*scss*/ 
-.link-inicio{
-font-family: 'Kanit', sans-serif;
-color: white; 
 
-    ul{
-    list-style: none;
-    }
-}
 .home-navegador-lista-home{
 list-style-type: none;
 display: flex;
@@ -239,12 +224,11 @@ margin: 20px 40px;
 text-align: start;   
 }
 .texto-footer-somos{
-font-family: 'Kanit', sans-serif;
+@extend .boton;
 font-size: 1em;
-font-weight: bolder;
 color:$color-gradiente; 
 margin: 20px 10px;  
-text-align: center;    
+   
 }
 footer{
 background-color: $color-primary; 
@@ -281,11 +265,9 @@ max-width: 65px;
     background-color: #b36002ab !important;
     font-family: 'Kanit', sans-serif !important;
     font-weight: bold !important;
-    .navbar-brand{
-        color: white !important;
+    
     }
 
-}
 /*-----------------------media queries................desktop- PAGINA INICIAL*/
 @media screen and (min-width:768px){
 
@@ -313,10 +295,6 @@ header, main, footer{
     flex-direction: row;
     justify-content: space-around;
     background-color: #C89265;
-}
-.link-inicio{
-    font-family: 'Kanit', sans-serif;
-    color: white;  
 }
 
 
@@ -349,10 +327,7 @@ flex-direction: row;
 justify-content: space-around;
 background-color: #C89265; 
 }
-.link-inicio{
-font-family: 'Kanit', sans-serif;
-color: white;
-}
+
 .navbar-brand{
     width: 1000px;
 
@@ -385,10 +360,7 @@ grid-area: redessociales-menu;
     justify-content: space-around;
     background-color: #C89265; 
     }
-.link-inicio{
-    font-family: 'Kanit', sans-serif;
-    color: white; 
-    }
+
     /*-------------------------------------------------------MAIN....PAGINA INICIAL.......................................*/
 main{
     grid-area: main;
