--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -65,9 +65,13 @@
     .video{
             display: none;
         }
+        @mixin image($tamano1, $tamano2) {
+            max-width:$tamano1;
+            margin-left:$tamano2;
+            
+        }
     .parrafo3 img, .parrafo1 img{
-            max-width: 80px;
-            margin-left: 5px;
+           @include image(80px, 5px)
         }
  /*-------------------------------main mobile pagina MENU--------------*/
  .titulo-menu-{
