--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,6 +6,15 @@
     "main"
     "footer";
 } 
+
+header {
+
+    grid-area: header;
+}
+footer{
+    grid-area: footer;
+    }
+
     /*...........................main mobile....PAGINA INICIAL..............*/
     main{
         grid-area: main;
@@ -14,7 +23,7 @@
         "main-logo"
         "main-descripcion";
 
-        .main-logo, {
+        .main-logo {
             grid-area: main-logo;
             text-align: center;
             margin-top: auto;
@@ -24,6 +33,7 @@
         background-color: $color-primary;
         grid-area: main-descripcion;
         justify-content: center;
+        color: brown;
         }
     }
 
@@ -35,7 +45,9 @@
             height: 200px;
             margin: auto;
         }
-
+    .parrafo{
+    color: #522903;
+    }
     .boton{
         font-family: 'Kanit', sans-serif;
         font-weight: bolder;
@@ -49,11 +61,11 @@
         }
 
     $varios: (
-1:#ff6600,
-2:brown,
-3:red,
-);
-@each $parrafo, $color in $varios{
+    1:#ff6600,
+    2:brown,
+    3:red,
+    );
+    @each $parrafo, $color in $varios{
     .parrafo#{$parrafo}{color: $color;}
 }
 
@@ -65,11 +77,11 @@
     .video{
             display: none;
         }
-        @mixin image($tamano1, $tamano2) {
+    @mixin image($tamano1, $tamano2) {
             max-width:$tamano1;
             margin-left:$tamano2;
             
-        }
+    }
     .parrafo3 img, .parrafo1 img{
            @include image(80px, 5px)
         }
@@ -132,28 +144,9 @@
   header{
     grid-area:header;
 }
-header, main, footer{
-    border: solid 2px white;
-}
-
-
-.link-inicio{
-    font-family: 'Kanit', sans-serif;
-    color: white;
-
     ul{
     list-style: none;
     }
-}
-
-.home-navegador-lista{
-list-style-type: none;
-display: flex;
-flex-direction: column;
-text-align: center;
-margin-top: auto;
-background-color: #C89265; 
-}
 
 /*---------------------------header-MOBILE- MENU........................*/
 .pagina-menu{
@@ -161,7 +154,7 @@ display: grid;
 grid-template-areas: 
 "header-menu"
 "into-menu"
-"redessociales-menu";
+"redessociales";
 }
 .header-menu{
 grid-area: header-menu;
@@ -169,22 +162,13 @@ grid-area: header-menu;
 .into-menu{
 grid-area: into-menu;
 }
-.redessociales-menu{
-grid-area: redessociales-menu;
-}
-header, main, footer{
-border: solid 2px white;
+.redessociales{
+grid-area: redessociales;
+
 }
 
 
-.home-navegador-lista-home{
-list-style-type: none;
-display: flex;
-flex-direction: column;
-text-align: start;
-margin-top: auto;
-background-color: #C89265; 
-}
+
 
 /*------------------------- header-MOBILE-PEDIDOS -----------------*/
 
@@ -193,7 +177,7 @@ display: grid;
 grid-template-areas: 
 "header-pedidos"
 "mapa"
-"redessociales-menu";
+"redessociales";
 
 }
 .header-pedidos{
@@ -205,35 +189,22 @@ grid-area: mapa;
 .mapa img{
 max-width: fit-content;
 }
-.redessociales-menu{
-grid-area: redessociales-menu;
-}
-.home-navegador-lista-home, .mapa, .redessociales-menu{
-border: solid 2px white;
+.redessociales{
+grid-area: redessociales;
 }
 
-/*scss*/ 
 
-.home-navegador-lista-home{
-list-style-type: none;
-display: flex;
-flex-direction: column;
-text-align: start;
-margin-top: auto;
-background-color: #C89265; 
-}
 
     /*..............................footer mobile...pagina inicial................*/
-footer{
-grid-area: footer;
-}
+
 .titulo-footer, .redes{ 
 font-family: 'Kanit', sans-serif;
 font-size: 1.5em;
 font-weight: bolder;
 color:$color-gradiente; 
 margin: 20px 40px;  
-text-align: start;   
+text-align: start; 
+
 }
 .texto-footer-somos{
 @extend .boton;
@@ -244,24 +215,9 @@ margin: 20px 10px;
 }
 footer{
 background-color: $color-primary; 
-display: grid;
-grid-template-areas: 
-"quienes-somos"
-"redessociales";
-}
-.quienes-somos, .redessociales{
-border:solid 2px white;
+margin-left: 0%;
 }
 
-.quienes-somos{
-grid-area: quienes-somos;   
-}
-.redessociales-menu{
-justify-content:center;
-}
-.redessociales{
-grid-area: redessociales;
-}
 /*imagenes redes sociales*/
 .instagram img{
 max-width: 45px;
@@ -289,27 +245,19 @@ max-width: 65px;
     grid-template-areas:
     "header header"
     "main main"
-    "footer footer";
+  "footer footer"
 } 
-
- /*................................................HEADER-Desktop PAGINA INICIAL..........................................*/
+footer{
+    grid-area: footer;
+    display: flex;
+    justify-content: center;
+}
 header{
     grid-area: header;
-
 }
-header, main, footer{
-    border: solid 2px white;
-}
-
-.home-navegador-lista{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: #C89265;
-}
-
-
+main{
+    grid-area: main;
+}    
 /*................................................PAGINA Menu..........................................*/
 .pagina-menu{
 height: 900px;
@@ -317,7 +265,7 @@ display: grid;
 grid-template-areas: 
 "header-menu header-menu"
 "into-menu into-menu"
-"redessociales-menu redessociales-menu";
+"redessociales redessociales";
 }
 .header-menu{
 grid-area: header-menu;
@@ -325,20 +273,12 @@ grid-area: header-menu;
 .into-menu{
 grid-column: into-menu;
 }
-.redessociales-menu{
-grid-area: redessociales-menu;
+.redessociales{
+grid-area: redessociales;
 }
-header, main, footer{
-border: solid 2px #white;
-}
+
+
 /*................................................HEADER PAGINA Menu..........................................*/
-.home-navegador-lista-home{
-list-style-type: none;
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-background-color: #C89265; 
-}
 
 .navbar-brand{
     width: 1000px;
@@ -350,7 +290,7 @@ display: grid;
 grid-template-areas: 
 "header-pedidos header-pedidos"
 "mapa mapa"
-"redessociales-menu redessociales-menu";
+"redessociales redessociales";
 }
 
 .header-pedidos{
@@ -360,23 +300,10 @@ grid-area: header-pedidos;
 grid-area: mapa;
 justify-content: center;
 }
-.redessociales-menu{
-grid-area: redessociales-menu;
+.redessociales{
+grid-area: redessociales;
 }
 
-/*-----------------------Header pagina pedidos--------------------------------*/
-.home-navegador-lista-home{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: #C89265; 
-    }
-
-    /*-------------------------------------------------------MAIN....PAGINA INICIAL.......................................*/
-main{
-    grid-area: main;
-}    
 .boton-animacion{
     display: flex;
     justify-content: center;
@@ -477,78 +404,10 @@ grid-area: producto5;
 grid-area: producto6;
 }
 /*-------------------------------------------------------Main----Pagina-PEDIDOS-------------------------------------*/
-.parrafo{
-    color: #522903;
-}
+
 .parrafo2{
     align-content: center;
 }
-/*-------------------------------------------------------footer.....PAGINA INICIAL......................................*/
-
-.titulo-footer, .redes{ 
-    font-size: 2em;     
-}
-
-.texto-footer-somos{
-    font-family: 'Kanit', sans-serif;
-    font-size: 1em;
-    font-weight: bolder;
-    color:$color-gradiente; 
-    margin: 20px 40px;  
-    text-align: start;    
-}
-
-footer{
-    height: 80px;
-    background-color: #C89265;
-    display: grid;
-    grid-template-areas: 
-    " quienes-somos redessociales";
-}
-
-.quienes-somos, .redessociales{
-    border:solid 2px white;
-}
-
-.quienes-somos{
-    grid-area: quienes-somos;
-    height: 160px;  
-}
-.redessociales-menu{
-    justify-content:center;
-}
-
-.redessociales{
-    grid-area: redessociales;
-    height: 160px;  
-}
-
-/*imagenes redes sociales*/
-.instagram img{
-    max-width: 45px;
-}
-.phone img{
-    max-width: 73px;
-}
-
-.face img{
-    max-width: 65px;
-}
-
-/*Traslado de imagenes redes*/
-.face{
-    transform: translate(200px, -55px);
-}
-.phone{
-    transform: translate(300px, -120px);
-}
-.instagram{
-    transform: translate(100px,5px);
-}
-
-    /*.............................................................................*/
-
-    /*..................................................F0NDO COLOR PAGINAS.................................*/
 
 
 .fondo-color-menu{
