--- a/css/main.css
+++ b/css/main.css
@@ -66,11 +66,6 @@ main {
   margin-left: 5px; }
 
 /*-------------------------------main mobile pagina MENU--------------*/
-.titulo-menu- {
-  height: 70px;
-  background-image: url(./public/marca-oscura.jpg);
-  opacity: 0.7; }
-
 .churros-rellenos img, .churros-comunes img, .delgados img, .bañados img, .delgados-bañados img, .picachurros img {
   max-width: 50px; }
 
@@ -104,7 +99,7 @@ main {
 .producto6 {
   grid-area: producto6; }
 
-.titulo-envios {
+.titulo {
   font-family: 'Kanit', sans-serif;
   color: #C89265;
   text-align: center;
@@ -148,7 +143,7 @@ ul {
   grid-area: redessociales; }
 
 /*..............................footer mobile...pagina inicial................*/
-.titulo-footer, .redes {
+.redes {
   font-family: 'Kanit', sans-serif;
   font-size: 1.5em;
   font-weight: bolder;
@@ -251,12 +246,6 @@ footer {
     max-width: 80px;
     margin-left: 5px; }
   /*---------------------------------------------main pagina menu----------------------------*/
-  .titulo-menu {
-    font-family: 'Kanit', sans-serif;
-    color: #C89265;
-    text-align: center;
-    font-size: 2em;
-    height: 50px; }
   .churros-rellenos img, .churros-comunes img, .delgados img, .bañados img, .delgados-bañados img, .picachurros img {
     max-width: 150px; }
   .rellenos, .comunes, .churritos, .churros-bañados, .churritos-bañados, .pica {
@@ -283,30 +272,13 @@ footer {
   /*-------------------------------------------------------Main----Pagina-PEDIDOS-------------------------------------*/
   .parrafo2 {
     align-content: center; }
-  .fondo-color-menu {
-    background-color: #eeccb0;
-    height: 50px; }
-  .fondo-color-pedido {
-    background-color: #eeccb0;
-    height: 50px; }
-  .fondo-color-envio {
-    background-color: #eeccb0;
-    height: 50px; }
-  .fondo-color-pagos {
-    background-color: #eeccb0;
-    height: 50px; }
-  .fondo-color-registro {
+  .fondo-color2 {
     background-color: #eeccb0;
     height: 50px; }
   /*..................................................TITULOS  PAGINAS.................................*/
-  .titulo-envios {
+  .titulo {
     font-family: 'Kanit', sans-serif;
     color: #C89265;
-    text-align: center;
-    font-size: 2em; }
-  .titulo-pagos {
-    font-family: 'Kanit', sans-serif;
-    color: #70280a;
     text-align: center;
     font-size: 2em; }
   /*...............................................categorias PAGINA DE MENU*/
