--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -14,7 +14,10 @@ header {
 footer{
     grid-area: footer;
     }
-
+.quienes-somos{
+    display: flex;
+    justify-content: center;
+}
     /*...........................main mobile....PAGINA INICIAL..............*/
     main{
         grid-area: main;
