--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -12,7 +12,7 @@
     footer{
         grid-area: footer;
         display: flex;
-        
+        justify-items: center;
     }
     header{
         grid-area: header;
@@ -171,7 +171,6 @@
         height: 50px;
     }
 
-
         /*..................................................TITULOS  PAGINAS.................................*/
     .titulo{
         font-family: 'Kanit', sans-serif;
@@ -179,11 +178,7 @@
         text-align: center;
         font-size: 2em;
     }
-
-
-        /*...............................................categorias PAGINA DE MENU*/
-
-
+    
 
         /*.....................................................imagen1 LOGO DE LAS PAGINAS DE ENVIOS y pagos*/
     .imagen1{
